fix comments css bug on mobile devices

--- a/comments/static/comments/css/comments.scss
+++ b/comments/static/comments/css/comments.scss
@@ -1,8 +1,8 @@
 
 #comment-form-box {
   margin-top: 1em; 
-  .profile-thumbnail-img {
-    width: 55px;
+  .comment-form {
+    padding: 1em 0;
   }
 }
 
@@ -32,15 +32,6 @@
 
 .comment-added-dt {
     color: grey;
-}
-
-.comment-text {
-    margin-left: -15;
-    padding-left: 0;
-}
-
-.comment-text-heading {
-
 }
 
 .comment-vline {
